templates/global.css
.center {
	margin: auto;
	width: 40%;
	font-family: "Source Serif 4", serif;
	font-optical-sizing: auto;
	color: #171717;
	margin-bottom: 25vh;
}

p,
li {
	line-height: 150%;
}

pre,
code {
	font-family: "Fira Code", arial;
	font-size: small;
}

pre {
	padding: 1em;
}

a {
	color: #3f88e8;
}

img {
	margin: auto;
	max-width: 100%;
	padding: 1em;
	min-width: 20%;
}

.nav {
	width: 100%;
	display: flex;
	align-items: center;
	gap: 1em;
	border-bottom: 1px solid gray;
}

